📝 (next.config.mjs): Add images configuration for domain 'basehub.earth' in next.config.mjs 📝 (next.config.mjs): Update Sentry configuration options in next.config.mjs 📝 (package.json): Update version of "@highlight-run/next" to "^7.5.1" in package.json 📝 (package.json): Add "basehub": "^4.0.12" dependency in package.json 📝 (package.json): Add "@tailwindcss/typography": "^0.5.12" as a dev dependency in package.json 📝 (sentry.client.config.ts): Enable Sentry in production environment in sentry.client.config.ts 📝 (src/app/api/contact/route.ts): Add 'request_new_location' option in requestTitles object in route.ts 📝 (src/app/changelog/page.tsx): Change import statement for ChangeLog component in page.tsx 📝 (src/app/globals.css): Add CSS comments for gradient styling in globals.css 📝 (src/app/page.tsx): Update pageTitle and pageDescription in JobBoard component in page.tsx The changes were made to update configurations, dependencies, and content in various files to improve functionality, styling, and user experience in the application.
📝 (changelog.tsx): Refactor ChangeLog component to use basehub library for fetching blog data and rendering posts dynamically
📝 (job-board.tsx): Add RequestLocationFormDialog component to handle requesting new locations and display a dialog form
The ChangeLog component has been refactored to use the basehub library for fetching blog data and rendering posts dynamically. This change allows for more flexibility and scalability in managing and displaying changelog information. Additionally, the JobBoard component now includes a RequestLocationFormDialog component to handle requesting new locations and displaying a dialog form for user interaction. This enhancement improves the user experience by providing a seamless way to request new locations within the job board feature.

📝 (navbar.tsx): Add Button component and Sheet components for improved UI functionality
📝 (contactForm.tsx): Add requestType prop to ContactForm component for more custo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @layer base {
+  body {
+    @apply bg-gradient-to-r from-slate-50 via-slate-100 to-slate-50
+  }
+} */
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
